--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "bulma": "^0.6.0",
     "gatsby": "^1.9.213",
     "gatsby-link": "^1.6.37",
+    "gatsby-module-loader": "^1.0.11",
     "gatsby-plugin-google-fonts": "0.0.4",
-    "gatsby-plugin-netlify-cms": "^1.0.9",
+    "gatsby-plugin-netlify-cms": "^1.0.12",
     "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-plugin-sass": "^1.0.17",
     "gatsby-plugin-sharp": "^1.6.34",
