--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,7 @@
 backend:
   name: Hironaka Admin
   display_url: https://unruffled-joliot-6bf9d9.netlify.com/
-  media_folder: static/img
-  public_folder: /img
+  media_folder: static/assets
 
 collections:
   - name: "blog"
