--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,7 @@
 backend:
   name: Hironaka Admin
-  display_url: https://unruffled-joliot-6bf9d9.netlify.com/
 
-media_folder: static/img
+media_folder: static/img/uploads
 
 collections:
   - name: "blog"
@@ -14,7 +13,6 @@ collections:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-post"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Date", name: "date", widget: "datetime"}
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
@@ -29,7 +27,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Description", name: "description", widget: "text"}
-      - {label: "Reo", name: "repo", widget: "text"}
+      - {label: "Repo", name: "repo", widget: "text"}
       - {label: "Project", name: "project", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
