--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,10 +1,11 @@
 backend:
+  name: github
   repo: PHironaka/test-gatsby-netlify # Path to Github repository
   branch: master # Branch to update (optional; defaults to master)
 
 display_url: https://unruffled-joliot-6bf9d9.netlify.com
 publish_mode: editorial_workflow
-media_folder: static/img
+media_folder: static/img/
 
 
 collections:
