--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,7 +5,8 @@ backend:
 
 display_url: https://unruffled-joliot-6bf9d9.netlify.com
 publish_mode: editorial_workflow
-media_folder: /static/img
+media_folder: "static/img" # Folder where user uploaded files should go
+public_folder: "img"
 
 
 collections:
