--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-helmet": "^5.2.0",
-    "sharp": "^0.20.2"
+    "sharp": "^0.20.2",
+    "styled-components": "^3.2.6"
   },
   "keywords": [
     "gatsby"
