--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,6 +4,7 @@ backend:
   branch: master # Branch to update (optional; defaults to master)
 
 display_url: https://unruffled-joliot-6bf9d9.netlify.com
+# publish_mode: editorial_workflow
 media_folder: "static/img" # Folder where user uploaded files should go
 public_folder: "img"
 
