--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-helmet": "^5.2.0",
+    "react-redux-loading-bar": "^4.0.5",
+    "redux": "^4.0.0",
     "sharp": "^0.20.2",
     "styled-components": "^3.2.6"
   },
