--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash-webpack-plugin": "^0.11.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-fade-in": "^0.1.6",
     "react-helmet": "^5.2.0",
     "react-redux-loading-bar": "^4.0.5",
     "redux": "^4.0.0",
