--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "react": "^16.2.0",
     "react-fade-in": "^0.1.6",
     "react-helmet": "^5.2.0",
+    "react-loading-bar": "0.0.7",
+    "react-loadingbar": "0.0.1",
+    "react-progress-bar-plus": "^1.3.1",
     "react-redux-loading-bar": "^4.0.5",
+    "react-sweet-progress": "^1.1.0",
     "redux": "^4.0.0",
     "sharp": "^0.20.2",
     "styled-components": "^3.2.6"
