--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^1.9.213",
     "gatsby-link": "^1.6.37",
     "gatsby-module-loader": "^1.0.11",
+    "gatsby-plugin-google-analytics": "^1.0.31",
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-manifest": "^1.0.22",
     "gatsby-plugin-netlify-cms": "^1.0.12",
