--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-manifest": "^1.0.22",
     "gatsby-plugin-netlify-cms": "^1.0.12",
+    "gatsby-plugin-nprogress": "^1.0.14",
     "gatsby-plugin-offline": "^1.0.16",
     "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-plugin-sass": "^1.0.17",
