--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-transformer-sharp": "^1.6.21",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-fade-in": "^0.1.6",
