--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bulma": "^0.6.0",
     "gatsby": "^1.9.213",
+    "gatsby-image": "^1.0.54",
     "gatsby-link": "^1.6.37",
     "gatsby-module-loader": "^1.0.11",
     "gatsby-plugin-google-analytics": "^1.0.31",
@@ -18,6 +19,7 @@
     "gatsby-plugin-sass": "^1.0.17",
     "gatsby-plugin-sharp": "^1.6.34",
     "gatsby-remark-images": "^1.5.50",
+    "gatsby-remark-responsive-image": "^1.0.0-alpha13-alpha.435e0178",
     "gatsby-source-filesystem": "^1.5.23",
     "gatsby-transformer-remark": "^1.7.33",
     "gatsby-transformer-sharp": "^1.6.21",
