--- a/package.json
+++ b/package.json
@@ -4,40 +4,45 @@
   "version": "1.1.1",
   "author": "Austin Green",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.0",
     "bulma": "^0.6.0",
-    "gatsby": "^1.9.213",
-    "gatsby-image": "^1.0.54",
-    "gatsby-link": "^1.6.37",
+    "gatsby": "^2.0.0",
+    "gatsby-image": "^2.0.26",
+    "gatsby-link": "^2.0.8",
     "gatsby-module-loader": "^1.0.11",
-    "gatsby-plugin-google-analytics": "^1.0.31",
+    "gatsby-plugin-google-analytics": "^2.0.9",
     "gatsby-plugin-google-fonts": "0.0.4",
-    "gatsby-plugin-manifest": "^1.0.22",
-    "gatsby-plugin-netlify-cms": "^1.0.12",
-    "gatsby-plugin-nprogress": "^1.0.14",
-    "gatsby-plugin-offline": "^1.0.16",
-    "gatsby-plugin-react-helmet": "^2.0.5",
-    "gatsby-plugin-sass": "^1.0.17",
-    "gatsby-plugin-sharp": "^1.6.34",
-    "gatsby-remark-images": "^1.5.50",
+    "gatsby-plugin-manifest": "^2.0.13",
+    "gatsby-plugin-netlify-cms": "^3.0.9",
+    "gatsby-plugin-nprogress": "^2.0.7",
+    "gatsby-plugin-offline": "^2.0.21",
+    "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-plugin-sass": "^2.0.7",
+    "gatsby-plugin-sharp": "^2.0.17",
+    "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-responsive-image": "^1.0.0-alpha13-alpha.435e0178",
-    "gatsby-source-filesystem": "^1.5.23",
-    "gatsby-transformer-remark": "^1.7.33",
-    "gatsby-transformer-sharp": "^1.6.21",
-    "lodash": "^4.17.5",
-    "lodash-webpack-plugin": "^0.11.4",
+    "gatsby-source-filesystem": "^2.0.13",
+    "gatsby-transformer-remark": "^2.2.0",
+    "gatsby-transformer-sharp": "^2.1.10",
+    "lodash": "^4.17.11",
+    "lodash-webpack-plugin": "^0.11.5",
+    "netlify-cms": "^2.3.3",
+    "node-sass": "^4.11.0",
     "nprogress": "^0.2.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-fade-in": "^0.1.6",
     "react-helmet": "^5.2.0",
     "react-loading-bar": "0.0.7",
     "react-loadingbar": "0.0.1",
     "react-progress-bar-plus": "^1.3.1",
-    "react-redux-loading-bar": "^4.0.5",
-    "react-sweet-progress": "^1.1.0",
-    "redux": "^4.0.0",
-    "sharp": "^0.20.2",
-    "styled-components": "^3.2.6"
+    "react-redux-loading-bar": "^4.2.0",
+    "react-sweet-progress": "^1.1.2",
+    "redux": "^4.0.1",
+    "sharp": "^0.21.1",
+    "styled-components": "^4.1.3"
   },
   "keywords": [
     "gatsby"
@@ -53,6 +58,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.7.4"
+    "prettier": "^1.15.3"
   }
 }
