--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "bulma": "^0.6.0",
-    "gatsby": "^2.0.0",
-    "gatsby-image": "^2.0.26",
+    "gatsby": "^2.0.66",
+    "gatsby-image": "^2.0.34",
     "gatsby-link": "^2.0.8",
     "gatsby-module-loader": "^1.0.11",
     "gatsby-plugin-google-analytics": "^2.0.9",
@@ -18,14 +18,15 @@
     "gatsby-plugin-offline": "^2.0.21",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.0.17",
+    "gatsby-plugin-sharp": "^2.0.29",
     "gatsby-plugin-sitemap": "^2.0.10",
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-remark-images": "^3.0.1",
+    "gatsby-remark-relative-images": "^0.2.1",
     "gatsby-remark-responsive-image": "^1.0.0-alpha13-alpha.435e0178",
     "gatsby-source-filesystem": "^2.0.13",
     "gatsby-transformer-remark": "^2.2.0",
-    "gatsby-transformer-sharp": "^2.1.10",
+    "gatsby-transformer-sharp": "^2.1.17",
     "lodash": "^4.17.11",
     "lodash-webpack-plugin": "^0.11.5",
     "netlify-cms": "^2.3.3",
@@ -41,6 +42,7 @@
     "react-progress-bar-plus": "^1.3.1",
     "react-redux-loading-bar": "^4.2.0",
     "react-sweet-progress": "^1.1.2",
+    "react-text-marquee": "^1.0.1",
     "redux": "^4.0.1",
     "sharp": "^0.21.1",
     "styled-components": "^4.1.3"
