--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.1",
   "author": "Austin Green",
   "dependencies": {
+    "@weknow/gatsby-remark-twitter": "^0.2.1",
     "babel-plugin-styled-components": "^1.10.0",
     "bulma": "^0.6.0",
     "gatsby": "^2.0.66",
@@ -18,10 +19,10 @@
     "gatsby-plugin-offline": "^2.0.21",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.0.29",
+    "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-plugin-sitemap": "^2.0.10",
     "gatsby-plugin-styled-components": "^3.0.4",
-    "gatsby-remark-images": "^3.0.1",
+    "gatsby-remark-images": "^3.0.10",
     "gatsby-remark-relative-images": "^0.2.1",
     "gatsby-remark-responsive-image": "^1.0.0-alpha13-alpha.435e0178",
     "gatsby-source-filesystem": "^2.0.13",
